LayoutTests/resources/accessibility-helper.js
@@ -197,7 +197,8 @@ async function waitForElementById(id) {
 
 // Executes the operation and waits until an accessibility notification of the provided
 // `notificationName` is received. A notification listener is added to the AccessibilityUIElement
-// passed in; before the operation is executed. The `operation` is expected to be a function.
+// passed in; before the operation is executed. The `operation` is expected to be a function,
+// which can optionally be async.
 async function waitForNotification(accessibilityElement, notificationName, operation) {
     var reached = false;
     function listener(receivedNotification) {
@@ -208,7 +209,7 @@ async function waitForNotification(accessibilityElement, notificationName, opera
     }
 
     accessibilityElement.addNotificationListener(listener);
-    operation();
+    await operation();
     await waitFor(() => { return reached; });
 }
 
@@ -286,6 +287,7 @@ async function waitForFocus(id) {
 // Selects text within the element with the given ID, and returns the global selected `TextMarkerRange` after doing so.
 // Optionally takes the AccessibilityUIElement associated with the web area as an argument. If not passed, we'll
 // retrieve it in the function.
+// NOTE: Only available for WK2.
 async function selectElementTextById(id, axWebArea) {
     const webArea = axWebArea ? axWebArea : accessibilityController.rootElement.childAtIndex(0);
     const selection = window.getSelection();
@@ -293,7 +295,7 @@ async function selectElementTextById(id, axWebArea) {
 
     await waitFor(() => {
         const selectedRange = webArea.selectedTextMarkerRange();
-        return webArea.textMarkerRangeLength(selectedRange) == 0;
+        return !webArea.isTextMarkerRangeValid(selectedRange);
     });
 
     const range = document.createRange();
@@ -303,7 +305,7 @@ async function selectElementTextById(id, axWebArea) {
     let selectedRange;
     await waitFor(() => {
         selectedRange = webArea.selectedTextMarkerRange();
-        return webArea.textMarkerRangeLength(selectedRange) > 0;
+        return webArea.isTextMarkerRangeValid(selectedRange);
     });
     return selectedRange;
 }
@@ -311,6 +313,7 @@ async function selectElementTextById(id, axWebArea) {
 // Selects a range of text delimited by the `startIndex` and `endIndex` within the element with the given ID,
 // and returns the global selected `TextMarkerRange` after doing so. Optionally takes the AccessibilityUIElement
 // associated with the web area as an argument. If not passed, we'll retrieve it in the function.
+// NOTE: Only available for WK2.
 async function selectPartialElementTextById(id, startIndex, endIndex, axWebArea) {
     const webArea = axWebArea ? axWebArea : accessibilityController.rootElement.childAtIndex(0);
     const selection = window.getSelection();
@@ -318,19 +321,25 @@ async function selectPartialElementTextById(id, startIndex, endIndex, axWebArea)
 
     await waitFor(() => {
         const selectedRange = webArea.selectedTextMarkerRange();
-        return webArea.textMarkerRangeLength(selectedRange) == 0;
+        return !webArea.isTextMarkerRangeValid(selectedRange);
     });
 
-    const range = document.createRange();
     const element = document.getElementById(id);
-    range.setStart(element.firstChild, startIndex);
-    range.setEnd(element.firstChild, endIndex);
-    selection.addRange(range);
+    if (element.setSelectionRange) {
+        // For textarea and input elements.
+        element.setSelectionRange(startIndex, endIndex);
+    } else {
+        // For contenteditable elements.
+        const range = document.createRange();
+        range.setStart(element.firstChild, startIndex);
+        range.setEnd(element.firstChild, endIndex);
+        selection.addRange(range);
+    }
 
     let selectedRange;
     await waitFor(() => {
         selectedRange = webArea.selectedTextMarkerRange();
-        return webArea.textMarkerRangeLength(selectedRange) > 0;
+        return webArea.isTextMarkerRangeValid(selectedRange);
     });
 
     return selectedRange;
